# Szymository

./: README.md  contr.md  newdoc  zadanie4_3.html  zadanie4_3.php  zadanie4_3_out.php
Projekt2/: CMakeLists.txt
Projekt2/src/: CMakeLists.txt  Frame.cpp  Frame.h  Moja_Apka.h  main2.cpp  makros.h
